--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -9,7 +9,14 @@
 .page--home {
   background: url('/assets/images/exploratorium-kid.jpg')
               no-repeat center center fixed;
-  background-size: cover;
+    -webkit-background-size: 100%;
+       -moz-background-size: 100%;
+         -o-background-size: 100%;
+            background-size: 100%;
+    -webkit-background-size: cover;
+       -moz-background-size: cover;
+         -o-background-size: cover;
+            background-size: cover;
 
   .home-cover {
     padding-top: 10em;
